--- a/app/src/main/res/menu/menu_apiary_detail.xml
+++ b/app/src/main/res/menu/menu_apiary_detail.xml
@@ -2,17 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!-- Standard Actions (Visible when NOT in multi-select) -->
+    <item
+        android:id="@+id/action_export_apiary"
+        android:icon="@drawable/ic_backup"
+        android:title="@string/export_apiary_label"
+        android:orderInCategory="10"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_search_hives"
         android:icon="@drawable/ic_search"
         android:title="@string/search_label"
+        android:orderInCategory="20"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
 
+    <!-- Multi-Select Actions (Visible ONLY in multi-select) -->
     <item
         android:id="@+id/action_select_all_hives"
         android:icon="@drawable/ic_select_all"
         android:title="@string/select_all_label"
+        android:orderInCategory="100"
         android:visible="false"
         app:showAsAction="always" />
 
@@ -20,6 +31,7 @@
         android:id="@+id/action_move_selected_hives"
         android:icon="@drawable/ic_move"
         android:title="@string/move_selected_label"
+        android:orderInCategory="110"
         android:visible="false"
         app:showAsAction="always" />
 
@@ -27,6 +39,7 @@
         android:id="@+id/action_edit_selected_hives"
         android:icon="@drawable/ic_edit"
         android:title="@string/edit_selected_label"
+        android:orderInCategory="120"
         android:visible="false"
         app:showAsAction="always" />
 
@@ -34,6 +47,7 @@
         android:id="@+id/action_delete_selected_hives"
         android:icon="@drawable/ic_delete"
         android:title="@string/delete_selected_label"
+        android:orderInCategory="130"
         android:visible="false"
         app:showAsAction="always" />
 
@@ -41,6 +55,7 @@
         android:id="@+id/action_cancel_selection"
         android:icon="@drawable/ic_cancel"
         android:title="@string/cancel_selection_label"
+        android:orderInCategory="140"
         android:visible="false"
         app:showAsAction="always" />
 
