--- a/app/src/main/res/layout/item_apiary.xml
+++ b/app/src/main/res/layout/item_apiary.xml
@@ -18,6 +18,18 @@
         android:layout_height="wrap_content"
         android:padding="16dp">
 
+        <!-- CheckBox for multi-selection -->
+        <CheckBox
+            android:id="@+id/checkbox_apiary_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="8dp"
+            tools:visibility="visible" />
+
         <!-- Apiary Name -->
         <TextView
             android:id="@+id/text_view_apiary_name"
@@ -26,7 +38,7 @@
             android:textAppearance="?attr/textAppearanceHeadline6"
             android:textColor="?android:attr/textColorPrimary"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/checkbox_apiary_select"
             app:layout_constraintEnd_toStartOf="@id/image_button_edit"
             tools:text="My First Apiary" />
 
@@ -39,7 +51,7 @@
             android:textColor="?android:attr/textColorSecondary"
             android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@id/text_view_apiary_name"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/checkbox_apiary_select"
             app:layout_constraintEnd_toStartOf="@id/image_button_edit"
             tools:text="Kyiv Oblast, Ukraine" />
 
@@ -52,7 +64,7 @@
             android:textColor="?android:attr/textColorSecondary"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/text_view_apiary_location"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/checkbox_apiary_select"
             tools:text="Hives: 10" />
 
         <!-- Edit Button -->
