--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_homeFragment_to_apiaryDetailFragment"
             app:destination="@id/apiaryDetailFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_bulkEditApiaryFragment"
+            app:destination="@id/bulkEditApiaryFragment" />
     </fragment>
 
     <fragment
@@ -31,12 +34,12 @@
         tools:layout="@layout/fragment_add_edit_apiary">
         <argument
             android:name="apiaryId"
-            app:argType="long"
-            android:defaultValue="-1L" />
+            android:defaultValue="-1L"
+            app:argType="long" />
         <argument
             android:name="title"
-            app:argType="string"
-            android:defaultValue="Apiary" />
+            android:defaultValue="Apiary"
+            app:argType="string" />
         <action
             android:id="@+id/action_addEditApiaryFragment_to_apiaryDetailFragment"
             app:destination="@id/apiaryDetailFragment"
@@ -54,8 +57,8 @@
             app:argType="long" />
         <argument
             android:name="apiaryName"
-            app:argType="string"
-            android:defaultValue="Apiary Details" />
+            android:defaultValue="Apiary Details"
+            app:argType="string" />
         <action
             android:id="@+id/action_apiaryDetailFragment_to_addEditHiveFragment"
             app:destination="@id/addEditHiveFragment" />
@@ -80,12 +83,12 @@
             app:argType="long" />
         <argument
             android:name="hiveId"
-            app:argType="long"
-            android:defaultValue="-1L" />
+            android:defaultValue="-1L"
+            app:argType="long" />
         <argument
             android:name="title"
-            app:argType="string"
-            android:defaultValue="Hive" />
+            android:defaultValue="Hive"
+            app:argType="string" />
     </fragment>
 
     <fragment
@@ -99,12 +102,6 @@
     </fragment>
 
     <fragment
-        android:id="@+id/settingsFragment"
-        android:name="com.stingsoftware.pasika.ui.settings.SettingsFragment"
-        android:label="Settings"
-        tools:layout="@layout/fragment_settings" />
-
-    <fragment
         android:id="@+id/inspectionListFragment"
         android:name="com.stingsoftware.pasika.ui.inspectionlist.InspectionListFragment"
         android:label="Inspections for Hive #{hiveNumber}"
@@ -114,8 +111,8 @@
             app:argType="long" />
         <argument
             android:name="hiveNumber"
-            app:argType="string"
-            android:defaultValue="N/A" />
+            android:defaultValue="N/A"
+            app:argType="string" />
         <action
             android:id="@+id/action_inspectionListFragment_to_addEditInspectionFragment"
             app:destination="@id/addEditInspectionFragment" />
@@ -131,12 +128,47 @@
             app:argType="long" />
         <argument
             android:name="inspectionId"
+            android:defaultValue="-1L"
+            app:argType="long" />
+        <argument
+            android:name="title"
+            android:defaultValue="Inspection"
+            app:argType="string" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/bulkEditApiaryFragment"
+        android:name="com.stingsoftware.pasika.ui.bulkedit.BulkEditApiaryFragment"
+        android:label="Bulk Edit Apiaries"
+        tools:layout="@layout/fragment_bulk_edit_apiary">
+        <argument
+            android:name="apiaryIds"
+            app:argType="long[]" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/todoListFragment"
+        android:name="com.stingsoftware.pasika.ui.todo.TodoListFragment"
+        android:label="To-Do List"
+        tools:layout="@layout/fragment_todo_list">
+        <action
+            android:id="@+id/action_todoListFragment_to_addEditTaskFragment"
+            app:destination="@id/addEditTaskFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/addEditTaskFragment"
+        android:name="com.stingsoftware.pasika.ui.todo.AddEditTaskFragment"
+        android:label="{title}"
+        tools:layout="@layout/fragment_add_edit_task">
+        <argument
+            android:name="taskId"
             app:argType="long"
             android:defaultValue="-1L" />
         <argument
             android:name="title"
             app:argType="string"
-            android:defaultValue="Inspection" />
+            android:defaultValue="Task" />
     </fragment>
 
 </navigation>
