--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Standard Material Design Colors (you might have these already) -->
+    <!-- Standard Material Design Colors -->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -9,24 +9,27 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <!-- Your App's Primary and Accent Colors (example values) -->
-    <color name="colorPrimary">#4CAF50</color>       <!-- A green color -->
-    <color name="colorPrimaryVariant">#388E3C</color>  <!-- A darker green -->
-    <color name="colorOnPrimary">#FFFFFF</color>      <!-- White text on primary background -->
+    <!-- Your App's Primary and Accent Colors -->
+    <color name="colorPrimary">#4CAF50</color>
+    <color name="colorPrimaryVariant">#388E3C</color>
+    <color name="colorOnPrimary">#FFFFFF</color>
 
-    <color name="colorSecondary">#FFC107</color>      <!-- An amber color -->
-    <color name="colorSecondaryVariant">#FFA000</color> <!-- A darker amber -->
-    <color name="colorOnSecondary">#000000</color>    <!-- Black text on secondary background -->
+    <color name="colorSecondary">#FFC107</color>
+    <color name="colorSecondaryVariant">#FFA000</color>
+    <color name="colorOnSecondary">#000000</color>
 
-    <color name="colorError">#F44336</color>          <!-- Red for errors -->
+    <color name="colorError">#F44336</color>
     <color name="colorOnError">#FFFFFF</color>
 
-    <!-- Updated: Pure white for primary text for maximum contrast in dark mode -->
-    <color name="app_text_primary">#FFFFFF</color>
-    <color name="app_text_secondary">#C0C0C0</color> <!-- Lighter grey for secondary text -->
+    <!-- FIX: Define colorSurface as a color resource -->
+    <color name="colorSurface">#121212</color>
 
-    <!-- Default background color for unselected hive views in dark mode -->
-    <color name="colorHiveDefaultBackground">#212121</color> <!-- Dark grey -->
-    <!-- Updated: Color for selected hive background in dark mode (lighter grey) -->
-    <color name="colorHiveSelectedBackground">#424242</color> <!-- Lighter grey -->
+    <!-- Text colors for dark mode -->
+    <color name="app_text_primary">#FFFFFF</color>
+    <color name="app_text_secondary">#C0C0C0</color>
+
+    <!-- Background colors for list items -->
+    <color name="colorHiveDefaultBackground">#212121</color>
+    <color name="colorHiveSelectedBackground">#424242</color>
+    <color name="colorTaskCompletedBackground">#2E3B2E</color>
 </resources>
