--- a/app/src/main/res/layout/fragment_add_edit_hive.xml
+++ b/app/src/main/res/layout/fragment_add_edit_hive.xml
@@ -125,7 +125,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:hint="Quantity"
+                    android:hint="@string/quantity"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -171,7 +171,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:text="Hive Characteristics"
+                    android:text="@string/hive_characteristics"
                     android:textAppearance="?attr/textAppearanceSubtitle1"
                     android:textColor="?android:attr/textColorPrimary"
                     android:textStyle="bold"
@@ -204,7 +204,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:hint="Other Material"
+                    android:hint="@string/other_material"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -223,7 +223,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:hint="Hive Type"
+                    android:hint="@string/hive_type"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/text_input_layout_material_other">
@@ -242,7 +242,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:hint="Other Hive Type"
+                    android:hint="@string/other_hive_type"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -279,7 +279,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:hint="Other Frame Type"
+                    android:hint="@string/other_frame_type"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -316,7 +316,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:hint="Other Breed"
+                    android:hint="@string/other_breed"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -545,7 +545,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:hint="Other Color"
+                    android:hint="@string/other_color"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -987,7 +987,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Last Inspection Date (Optional)"
+            android:hint="@string/last_inspection_date_optional"
             app:endIconDrawable="@drawable/ic_calendar"
             app:endIconMode="custom"
             app:layout_constraintEnd_toEndOf="parent"
@@ -1032,9 +1032,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
-            android:text="Save Hive"
-            app:layout_constraintEnd_toStartOf="@id/button_cancel_hive"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/save_hive"
+            app:layout_constraintStart_toEndOf="@id/button_cancel_hive"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_notes" />
 
         <com.google.android.material.button.MaterialButton
@@ -1044,9 +1044,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
-            android:text="Cancel"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/button_save_hive"
+            android:text="@string/cancel"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/button_save_hive"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_notes" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
