--- a/app/src/main/res/layout/empty_state_view.xml
+++ b/app/src/main/res/layout/empty_state_view.xml
@@ -13,7 +13,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:alpha="0.3"
-        android:contentDescription="Empty state icon"
+        android:contentDescription="@string/empty_state_icon"
         android:src="@drawable/ic_hexagon"
         app:tint="?attr/colorOnSurface" />
 
