--- a/app/src/main/res/layout/fragment_add_edit_task.xml
+++ b/app/src/main/res/layout/fragment_add_edit_task.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.todo.AddEditTaskFragment">
+    tools:context=".todo.AddEditTaskFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Task Title"
+            android:hint="@string/task_title"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -33,7 +33,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Description (Optional)"
+            android:hint="@string/description_optional"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_task_title"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Due Date &amp; Time (Optional)"
+            android:hint="@string/due_date_amp_time_optional"
             android:layout_marginTop="16dp"
             app:endIconDrawable="@drawable/ic_calendar"
             app:endIconMode="custom"
@@ -72,7 +72,7 @@
             android:id="@+id/switch_reminder"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Set Reminder"
+            android:text="@string/set_reminder"
             android:textAppearance="?attr/textAppearanceSubtitle1"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_due_date"
