--- a/app/src/main/res/layout/fragment_bulk_edit_hive.xml
+++ b/app/src/main/res/layout/fragment_bulk_edit_hive.xml
@@ -16,7 +16,7 @@
             android:id="@+id/text_view_bulk_edit_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Bulk Edit Hives"
+            android:text="@string/bulk_edit_hives_string"
             android:textAppearance="?attr/textAppearanceHeadline5"
             android:textColor="?android:attr/textColorPrimary"
             android:textStyle="bold"
@@ -42,7 +42,7 @@
             android:id="@+id/text_input_layout_hive_type"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Hive Type"
+            android:hint="@string/hive_type_string"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/text_view_selected_hives_count"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
             android:id="@+id/text_input_layout_frame_type"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Frame Type"
+            android:hint="@string/frame_type"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_type"
             app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +78,7 @@
             android:id="@+id/text_input_layout_number_of_frames"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Number of Frames"
+            android:hint="@string/number_of_frames"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_frame_type"
             app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +97,7 @@
             android:id="@+id/checkbox_auto_number_hives_bulk"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Automatically Number Selected Hives"
+            android:text="@string/automatically_number_selected_hives"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_number_of_frames"
             app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +108,7 @@
             android:id="@+id/text_input_layout_starting_hive_number_bulk"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Starting Hive Number"
+            android:hint="@string/starting_hive_number"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/checkbox_auto_number_hives_bulk"
             app:layout_constraintStart_toStartOf="parent"
@@ -129,7 +129,7 @@
             android:id="@+id/text_input_layout_ending_hive_number_bulk"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Ending Hive Number"
+            android:hint="@string/ending_hive_number"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_starting_hive_number_bulk"
             app:layout_constraintStart_toStartOf="parent"
@@ -174,7 +174,7 @@
             android:id="@+id/text_input_layout_breed"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Breed"
+            android:hint="@string/breed"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/barrier_bulk_hive_inputs"
             app:layout_constraintStart_toStartOf="parent"
@@ -192,7 +192,7 @@
             android:id="@+id/text_input_layout_hive_last_inspection_date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Last Inspection Date (Optional)"
+            android:hint="@string/last_inspection_date_optional_string"
             android:layout_marginTop="16dp"
             app:endIconDrawable="@drawable/ic_calendar"
             app:endIconMode="custom"
@@ -214,7 +214,7 @@
             android:id="@+id/text_input_layout_hive_notes"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Notes (Optional)"
+            android:hint="@string/notes_optional"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_last_inspection_date"
             app:layout_constraintStart_toStartOf="parent"
@@ -234,7 +234,7 @@
             android:id="@+id/button_save_bulk_edit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Apply Changes"
+            android:text="@string/apply_changes"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_notes"
@@ -246,7 +246,7 @@
             android:id="@+id/button_cancel_bulk_edit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:text="@string/cancel_string"
             android:layout_marginTop="32dp"
             android:layout_marginStart="8dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_notes"
