--- a/app/src/main/res/layout/item_apiary.xml
+++ b/app/src/main/res/layout/item_apiary.xml
@@ -77,7 +77,7 @@
             app:tint="?attr/colorAccent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:contentDescription="Edit apiary"
+            android:contentDescription="@string/edit_apiary_string_2"
             android:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
