--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,9 +7,15 @@
             android:title="@string/settings_theme_title"
             android:icon="@drawable/ic_dark_mode"
             app:actionLayout="@layout/drawer_switch_item" />
+
+        <!-- NEW: Language selection item -->
+        <item
+            android:id="@+id/drawer_language"
+            android:title="@string/language_title"
+            android:icon="@drawable/ic_language" />
     </group>
 
-    <item android:title="@string/application">
+    <item android:title="Application">
         <menu>
             <item
                 android:id="@+id/drawer_exit_app"
